# fastapi_course

./: .env-test  .gitignore  .test.env  Dockerfile  README.md  alembic.ini  docker-compose.yaml  hotels.py  main.py  nginx.conf  practice.py  pyproject.toml  pytest.ini  requirements.txt  test.py
api/: hotels.py
api/schemas/: schemas.py
api/test/: fixtures.py  test.py  test_hotels.py
src/: base.py  config.py  constants.py  db.py  exceptions.py  main.py
src/api/: auth.py  dependencies.py  exceptions.py  hotels.py
src/api/routers/: auth.py  booking.py  facilities.py  hotels.py  rooms.py
src/api/test/: test_hotels.py
src/migrations/: env.py
src/migrations/versions/: 01-10_10_2024_15-18_new_first_migration.py  01-25_09_2024_10-39_first_migration.py  01-25_09_2024_11-03_first_migration.py  01-25_09_2024_12-26_name_field_for_hotelsmodel_changed_to_.py  02-04_10_2024_17-22_baseflatmodel_done.py  02-04_10_2024_18-06_validators_for_users_model_added.py  02-15_10_2024_23-10_change_data_from_field_to_date_from_for_.py  03-08_10_2024_18-09_user_model_added_via_fastapi_users.py  05-22_10_2024_10-25_m2m_facilities_for_rooms.py  (+9 more)
src/models/: __init__.py  booking.py  facilities.py  hotels.py  images.py  rooms.py  users.py
src/repositories/: base.py  booking.py  facilities.py  hotels.py  images.py  queries.py  rooms.py  users.py  utils.py
src/schemas/: booking.py  facilities.py  hotels.py  images.py  rooms.py  users.py
src/services/: auth.py  base.py  bookings.py  facility.py  hotels.py  rooms.py  user.py  users.py
src/tasks/: celery_app.py  tasks.py
src/utils/: db_manager.py  rooms.py
tests/: conftest.py  mock_rooms.json  test.py
tests/facilities/: test_api.py
(+14 files in other folders)
