[tool.poetry]
name = "fastapi-course"
version = "0.1.0"
description = ""
authors = ["Artem <artni96@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
annotated-types = "0.7.0"
anyio = "4.4.0"
certifi = "2024.7.4"
click = "8.1.7"
dnspython = "2.6.1"
email-validator = "2.1.2"
fastapi-cli = "0.0.4"
h11 = "0.14.0"
httpcore = "1.0.5"
httptools = "0.6.1"
httpx = "0.27.0"
idna = "3.7"
jinja2 = "3.1.4"
markdown-it-py = "3.0.0"
markupsafe = "2.1.5"
mdurl = "0.1.2"
pydantic = "2.8.2"
pydantic-core = "2.20.1"
pygments = "2.18.0"
python-dotenv = "1.0.1"
python-multipart = "0.0.9"
pyyaml = "6.0.1"
rich = "13.7.1"
shellingham = "1.5.4"
sniffio = "1.3.1"
starlette = "0.37.2"
typer = "0.12.3"
typing-extensions = "4.12.2"
uvicorn = "0.30.3"
uvloop = "0.19.0"
watchfiles = "0.22.0"
websockets = "12.0"
fastapi = "0.111.1"
pytest = "^8.3.3"
pydantic-settings = "2.4.0"
sqlalchemy = "2.0.31"
alembic = "1.13.2"
asyncpg = "^0.29.0"
asyncio = "^3.4.3"
greenlet = "^3.1.1"
black = "^24.8.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
jwt = "^1.3.1"
pyjwt = "2.8.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
fastapi-cache2 = "^0.2.2"
celery = "^5.4.0"
pillow = "^11.0.0"
pytest-asyncio = "^0.24.0"
pytest-env = "^1.1.5"
pytest-dotenv = "^0.5.2"
pytest-order = "^1.3.0"
ruff = "^0.8.1"
pyright = "^1.1.389"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest_env]
HOME = "~/tmp"
RUN_ENV = 1
TRANSFORMED = {value = "{USER}/alpha", transform = true}
SKIP_IF_SET = {value = "on", skip_if_set = true}